--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-lazy-load": "^1.2.7",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "cross-env": "^5.2.0",
+    "dotenv": "^7.0.0",
+    "express": "^4.17.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "sass": "^1.45.2",
-    "sass-loader": "^10.2.0"
+    "@nuxtjs/dotenv": "1.3.0",
+    "nodemon": "^2.0.15",
+    "sass": "^1.36.0",
+    "sass-loader": "7.3.1"
   }
 }
